--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "seed:concepts": "ts-node scripts/seedConcepts.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +45,7 @@
     "@types/d3": "^7.4.3",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.5",
-    "@types/react-dom": "^19.1.5"
+    "@types/react-dom": "^19.1.5",
+    "ts-node": "^10.9.2"
   }
 }
