--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "seed:concepts": "ts-node scripts/seedConcepts.ts"
+    "seed:concepts": "ts-node scripts/seedConcepts.ts",
+    "seed:categories": "ts-node scripts/seedCategories.ts"
   },
   "eslintConfig": {
     "extends": [
