--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "ts-node": "^10.9.2"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
