--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "node scripts/generateVersionInfo.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -32,7 +33,8 @@
     "convert:local-to-mongo": "ts-node scripts/convertLocalToMongo.ts",
     "seed:from-local": "ts-node scripts/seedFromLocal.ts",
     "seed:from-mongo-ready": "node scripts/seedFromMongoReady.js",
-    "update:production": "node scripts/updateProductionData.js"
+    "update:production": "node scripts/updateProductionData.js",
+    "version:info": "node scripts/generateVersionInfo.js"
   },
   "eslintConfig": {
     "extends": [
