--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@vercel/analytics": "^1.5.0",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "express": "^5.1.0",
@@ -62,6 +63,6 @@
     "ts-node": "^10.9.2"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=18.0.0"
   }
 }
