--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.0",
     "mongodb": "^6.16.0",
     "multer": "^1.4.5-lts.1",
-    "pdf-parse": "^1.1.1",
-    "form-data": "^4.0.0",
     "node-fetch": "^2.7.0",
+    "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.1.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "^5.0.1",
@@ -42,7 +43,8 @@
     "version:info": "node scripts/generateVersionInfo.js",
     "test:pdf": "node test-pdf-extraction.js",
     "test:server": "node test-server-endpoints.js",
-    "debug:masterlist": "node debug-master-list.js"
+    "debug:masterlist": "node debug-master-list.js",
+    "test:save-article": "node test-save-article.js"
   },
   "eslintConfig": {
     "extends": [
